plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.8-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id "org.asciidoctor.jvm.convert" version "3.3.2"
}

group = 'kr.or'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
	implementation 'org.springframework.data:spring-data-elasticsearch:4.4.6'
	implementation 'co.elastic.clients:elasticsearch-java:7.17.8'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
	implementation 'jakarta.json:jakarta.json-api:2.0.1'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.8'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'org.hamcrest:hamcrest-library:2.2'
	implementation 'org.hamcrest:hamcrest:2.2'
	compileOnly 'org.projectlombok:lombok'
  //implementation 'org.postgresql:postgresql:42.5.1'
	implementation 'mysql:mysql-connector-java:8.0.32'
	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}



asciidoctor.doFirst {  // 7
	println("---------------- delete present asciidoctor.")
	delete file('src/main/resources/static/docs')
}

asciidoctor.doLast {  // 8
	println("---------------- asciidoctor is deleted!")
}

task copyHTML(type: Copy) {  // 9
	dependsOn asciidoctor
	from file("build/docs/asciidoc")
	into file("src/main/resources/static/docs")
}

build {  // 10
	dependsOn copyHTML
}

